# complex-code-spotter

./: Cargo.toml  README.md
.github/workflows/: complex-code-spotter-compact.yml  complex-code-spotter-ubuntu.yml  deploy.yml
data/seahorse/compare_high/: data_seahorse_src_command.json
data/seahorse/compare_low/: data_seahorse_src_app.json  data_seahorse_src_command.json  data_seahorse_src_context.json  data_seahorse_src_flag.json
src/: concurrent.rs  error.rs  lib.rs  metrics.rs  non_utf8.rs  output.rs  snippets.rs
